# caera

./: 404.html  CNAME  LICENSE  README.md  __main__.py  colors.py  colorsH.py  index.html  mkdocs.yml  pyproject.toml  schema.sql  sitemap.xml
commands/misc/: index.html
docs/commands/: misc.md
search/: search_index.json
src/core/: __init__.py  bot.py  consts.py  setups.py
src/exts/: info.py  misc.py  voice.py
src/utils/: embeds.py  images.py
